-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0 Beta3
-
None
-
MSVC 2022 x64
-
-
aa7e85eee (dev), 6111ca756 (6.9), 0ca95ae84 (dev), 69c253681 (6.9)
qtbase/ac5ab8ce32c6bd4122ecc690d30eade5c4f4bf2a remove the export of "~QESDP<QFontVariableAxisPrivate>", and this change causes MSVC 2022 fail to link QtQuick.dll.
Compiler error message:
Creating library qtbase\lib\Qt6Quick.lib and object qtbase\lib\Qt6Quick.exp mocs_compilation.cpp.obj : error LNK2001: unresolved external symbol "public: __cdecl QExplicitlySharedDataPointer<class QFontVariableAxisPrivate>::~QExplicitlySharedDataPointer<class QFontVariableAxisPrivate>(void)" (??1?$QExplicitlySharedDataPointer@VQFontVariableAxisPrivate@@@@QEAA@XZ) qtbase\bin\Qt6Quick.dll : fatal error LNK1120: 1 unresolved externals
- is duplicated by
-
QTBUG-141790 Compiling Qt with VS2022 and CMAKE_INTERPROCEDURAL_OPTIMIZATION=TRUE fails to link
-
- Closed
-
- relates to
-
QTBUG-133961 msvc LTO: compilation failure related to QSafeQuickItemChangeListener
-
- Reported
-
- tests
-
QTBUG-128656 Unclear usage of QT_DECLARE_QESDP_SPECIALIZATION_DTOR_WITH_EXPORT
-
- Closed
-